<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".activity.PublicActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/single_height"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toTopOf="@+id/edit_title"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate_before_black_24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/PUBLISH"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:text="@string/PUBCONFIRM"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/draft_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:text="@string/DRAFT"
            android:textSize="16sp" />

    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/single_height"
        android:layout_marginStart="@dimen/edit_leftright_margin"
        android:layout_marginTop="@dimen/edit_top_margin"
        android:layout_marginEnd="@dimen/edit_leftright_margin"
        android:hint="@string/title"
        android:textSize="14sp"
        android:background="@drawable/line"
        app:layout_constraintTop_toBottomOf="@id/top_panel" />

    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/content_height"
        android:layout_marginStart="@dimen/edit_leftright_margin"
        android:layout_marginTop="@dimen/edit_top_margin"
        android:layout_marginEnd="@dimen/edit_leftright_margin"
        android:gravity="top"
        android:hint="@string/summary"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        android:background="@drawable/line"
        app:layout_constraintTop_toBottomOf="@id/edit_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_leftright_margin"
        android:layout_marginTop="@dimen/edit_top_margin"
        android:layout_marginEnd="@dimen/edit_leftright_margin"
        android:background="@drawable/line"
        app:layout_constraintTop_toBottomOf="@id/edit_content" />

    <RelativeLayout
        android:id="@+id/addpos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/single_height"
        android:layout_marginStart="@dimen/edit_leftright_margin"
        android:layout_marginTop="@dimen/edit_top_margin"
        android:layout_marginEnd="@dimen/edit_leftright_margin"
        android:background="@drawable/line"
        app:layout_constraintTop_toBottomOf="@id/rcv_img">

        <ImageView
            android:id="@+id/pov_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_pov_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/pov_img"
            android:gravity="center_vertical"
            android:text="@string/SENDPOV"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/currentpos"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:text=""
            android:textSize="12sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addmusic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/single_height"
        android:layout_marginStart="@dimen/edit_leftright_margin"
        android:layout_marginTop="@dimen/edit_top_margin"
        android:layout_marginEnd="@dimen/edit_leftright_margin"
        android:background="@drawable/line"
        app:layout_constraintTop_toBottomOf="@id/addpos">

        <ImageView
            android:id="@+id/music_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_music_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/music_img"
            android:gravity="center_vertical"
            android:text="@string/SENDMUSIC"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/currentmusic"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:text=""
            android:textSize="12sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addvideo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/single_height"
        android:layout_marginStart="@dimen/edit_leftright_margin"
        android:layout_marginTop="@dimen/edit_top_margin"
        android:layout_marginEnd="@dimen/edit_leftright_margin"
        android:background="@drawable/line"
        app:layout_constraintTop_toBottomOf="@id/addmusic">

        <ImageView
            android:id="@+id/video_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_video_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/video_img"
            android:gravity="center_vertical"
            android:text="@string/SENDVIDEO"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/currentvideo"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:text=""
            android:textSize="12sp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>